Sync: Now able to upload files with multipart/form-data, which means files can be uploaded via JavaScript and a web interface!
Related to issue #418.

--- a/MPfm/MPfm.Library/WebApp/index.html
+++ b/MPfm/MPfm.Library/WebApp/index.html
@@ -4,9 +4,13 @@
     <title>Sessions App Sync</title>
     <link href="css/app.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.upload-1.0.2.min.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
     Welcome to Sessions App Sync!
+
+    <input type="file" multiple="multiple" id="fileUpload" name="fileUpload" />
+    <input type="button" id="btnUpload" value="Upload" />
 </body>
 </html>
