Sync Web App: Now displaying whole library content and every file can be downloaded. Tested upload/download on iOS, Android, etc. and everything works.
Related to issue #418.

--- a/MPfm/MPfm.Library/WebApp/login.html
+++ b/MPfm/MPfm.Library/WebApp/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="centerBlock">
-        <img src="images/app_logo.png" style="width: 232px; height: 232px;" />
+        <img src="images/app_logo.png" style="width: 232px; height: 232px; padding: 16px;" />
         <h2>
             Welcome to Sessions App Sync!
         </h2>
