--- a/MPfm/MPfm.Library/WebApp/index.html
+++ b/MPfm/MPfm.Library/WebApp/index.html
@@ -9,24 +9,46 @@
     <script src="js/app.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="centerBlock">
-        <img src="images/app_logo.png" style="width: 232px; height: 232px;" />
-        <h2>
-            Welcome to Sessions App Sync!
-        </h2>
-        <ul>
-            <li>Home</li>
-            <li>Library</li>
-            <li>Upload</li>
-        </ul>
-        <p>
-            Library name: Yanick's Library
-            <br />
-            Number of files: 1405
-            <br />
-            Library size: 14459 MB
-        </p>
-        <table id="theTable"></table>
+    <!--<div class="navBar">-->
+        <!--<ul class="nav">-->
+            <!--<li class="navItem">-->
+                <!--<img src="images/app_logo.png" style="width: 44px; height: 44px;" />-->
+            <!--</li>-->
+            <!--<li class="navItem"><a href="#about">Upload</a></li>-->
+            <!--<li class="navItem"><a href="#download">Download</a></li>-->
+        <!--</ul>-->
+    <!--</div>-->
+    <div class="header">
+        <div style="float: left; padding: 4px; margin-top: 2px;">
+            <img src="images/app_logo.png" style="width: 44px; height: 44px;" />
+        </div>
+        <div style="float: left; padding: 4px; margin-top: 6px;">
+            <!--<div class="headerTitle">Library name:</div>-->
+            <div class="headerTitle">Yanick Castonguay's Library (iOS)</div>
+            <!--<div class="headerTitle">Platform</div>-->
+            <!--<div class="headerSubtitle">iOS</div>-->
+            <!--<div class="headerTitle">Number of files:</div>-->
+            <div class="headerSubtitle">1049 files (14459 MB total)</div>
+
+            <!--<table>-->
+                <!--<tr>-->
+                    <!--<td>Library name:</td>-->
+                    <!--<td>Yanick Castonguay's Library</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td>Platform:</td>-->
+                    <!--<td>iOS</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td>Number of files:</td>-->
+                    <!--<td>1049 (14459 MB total size)</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        </div>
+        <div style="clear: both;"></div>
+    </div>
+    <div>
+        <table id="tableIndex"></table>
         <input type="file" multiple="multiple" id="fileUpload" name="fileUpload" />
         <input type="button" id="btnUpload" value="Upload" />
         <input type="button" id="btnDownloadIndex" value="Download index" />
