iOS: Added icons for mobile menu. Added new slider color for sliders over album art (pure gray). Added ISyncWebBrowserView; this is a simple page showing the sync listener url and authentication code.
Related to issue #405 and issue #418.

--- a/MPfm/MPfm.Library/WebApp/login.html
+++ b/MPfm/MPfm.Library/WebApp/login.html
@@ -17,11 +17,11 @@
         <p>
             To access the web interface of Sessions, you need to enter the authentication code shown on your device.
         </p>
-        <form name="formLogin" id="formLogin">
+        <form name="formLogin" id="formLogin" onsubmit="submitLoginForm()">
             <p>
                 <label for="authenticationCode">Authentication code:</label>
                 <span class="spacer">&nbsp;</span>
-                <input type="text" class="inputCode" name="authenticationCode" id="authenticationCode">
+                <input type="number" class="inputCode" name="authenticationCode" id="authenticationCode">
             </p>
             <p>
                 <input type="button" class="button" value="Login" name="authenticationCodeSubmit" id="authenticationCodeSubmit" onclick="submitLoginForm();return false;">
